--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Dhruv Parmar">
     <meta property="og:title" content="Dhruv Parmar | Portfolio">
     <meta property="og:description" content="Explore Dhruv Parmar's portfolio showcasing his skills, projects, and expertise in frontend development and more.">
-    <meta property="og:image" content="https://parmarportfolio.vercel.app/assets/dhruvparmar-BIsA6nCu.jpg"> 
+    <meta property="og:image" content="https://parmarportfolio.vercel.app/assets/profile-DY3Na6i4.jpeg"> 
     <meta property="og:url" content="https://parmarportfolio.vercel.app"> 
     <meta property="og:type" content="website">
     <title>Dhruv's Portfolio</title>
