--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/D.svg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <meta name="title" content="Dhruv Parmar | Portfolio">
-    <meta name="description" content="Explore Dhruv Parmar's portfolio showcasing his skills, projects, and expertise in frontend development and more.">
-    <meta name="keywords" content="Dhruv Parmar, portfolio, frontend developer, web development, projects, web design">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Dhruv Parmar">
-    <meta property="og:title" content="Dhruv Parmar | Portfolio">
-    <meta property="og:description" content="Explore Dhruv Parmar's portfolio showcasing his skills, projects, and expertise in frontend development and more.">
-    <meta property="og:image" content="https://parmarportfolio.vercel.app/assets/profile-DY3Na6i4.jpeg"> 
-    <meta property="og:url" content="https://parmarportfolio.vercel.app"> 
-    <meta property="og:type" content="website">
-    <title>Dhruv's Portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-      
-   
-  </body>
+
+<head>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="icon" type="image/svg+xml" href="./src/assets/D.svg" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <meta name="title" content="Dhruv Parmar | Portfolio">
+   <meta name="description"
+      content="Explore Dhruv Parmar's portfolio showcasing his skills, projects, and expertise in frontend development and more.">
+   <meta name="keywords" content="Dhruv Parmar, portfolio, frontend developer, web development, projects, web design">
+   <meta name="robots" content="index, follow">
+   <meta name="author" content="Dhruv Parmar">
+   <meta property="og:title" content="Dhruv Parmar | Portfolio">
+   <meta property="og:description"
+      content="Explore Dhruv Parmar's portfolio showcasing his skills, projects, and expertise in frontend development and more.">
+   <meta property="og:image" content="https://parmarportfolio.vercel.app/assets/profile-DY3Na6i4.jpeg">
+   <meta property="og:url" content="https://parmarportfolio.vercel.app">
+   <meta property="og:type" content="website">
+   <title>Dhruv's Portfolio</title>
+</head>
+
+<body>
+   <div id="root"></div>
+   <script type="module" src="/src/main.jsx"></script>
+
+
+</body>
+
 </html>
